# Blog_Post

./: .gitignore  CMakeLists.txt
computing/: CMakeLists.txt  autodiff_test.cpp  autodiff_test_2.cpp  autodiff_test_2.h
utils/: time_bench.h
